--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -12,6 +12,10 @@
       width: 100%; height: 100%;
       object-fit: cover;
     }
+    img {
+      width: 100%; height: 100%;
+      object-fit: contain;
+    }
   }
   .close {
     font: bold 14px/1 'arial';
